feat: add Windows install and fish/PowerShell completions
- install.ps1: Windows PowerShell installer with argus.cmd wrapper
- completions/argus.fish: fish shell completions (32 commands)
- completions/argus.ps1: PowerShell tab completions (32 commands)
- install.sh: add fish completion auto-install support
- README: add Windows install instructions

Signed-off-by: rlaope <piyrw9754@gmail.com>